Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-18750

Unable to rename Network Connection from context menu or F2

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.15
    • Shell
    • None

    Description

      reactos-bootcd-0.4.15-dev-5517-g9762ef9-x86-gcc-lin-dbg

      err:(dll/win32/shell32/debughlp.cpp:384) unknown IDLIST 002E4EB8 [002E4EB8] size=158 type=99
      err:(dll/win32/shell32/debughlp.cpp:345) 9E 00 99 01 E8 4F 19 C7 B3 46 4B BC 2C 46 B7 72    .....O...FK.,F.r
      err:(dll/win32/shell32/debughlp.cpp:345) 79 DD 73 F8 B4 9F 02 00 00 00 03 00 00 00 18 00    y.s.............
      err:(dll/win32/shell32/debughlp.cpp:345) 00 00 28 00 00 00 48 00 00 00 4C 00 41 00 4E 00    ..(...H...L.A.N.
      err:(dll/win32/shell32/debughlp.cpp:345) 2D 00 56 00 65 00 72 00 62 00 69 00 6E 00 64 00    -.V.e.r.b.i.n.d.
      err:(dll/win32/shell32/debughlp.cpp:345) 75 00 6E 00 67 00 64 00 00 00 49 00 6E 00 74 00    u.n.g.d...I.n.t.
      err:(dll/win32/shell32/debughlp.cpp:345) 65 00 6C 00 20 00 38 00 32 00 35 00 34 00 33 00    e.l. .8.2.5.4.3.
      err:(dll/win32/shell32/debughlp.cpp:345) 47 00 43 00 20 00 43 00 6F 00 70 00 70 00 65 00    G.C. .C.o.p.p.e.
      err:(dll/win32/shell32/debughlp.cpp:345) 72 00 20 00 50 00 43 00 49 00 20 00 45 00 74 00    r. .P.C.I. .E.t.
      
      

      *  Press F2 : Does nothing and logs 

      fixme:(dll/shellext/netshell/shfldr_netconnect.cpp:638) Got invalid command
      CDefView.cpp:1523: Unexpected failure (hr)=80004001.
      

      *  Leave mouse cursor for long

       

      Attachments

        1. 0001-Fixed.patch
          3 kB
        2. 0003-Fixed.patch
          2 kB
        3. Final-Fixed.patch
          1 kB
        4. image-2022-12-13-23-50-59-247.png
          image-2022-12-13-23-50-59-247.png
          11 kB
        5. image-2022-12-13-23-51-57-864.png
          image-2022-12-13-23-51-57-864.png
          7 kB
        6. image-2022-12-13-23-52-08-331.png
          image-2022-12-13-23-52-08-331.png
          11 kB
        7. ReactOS.log
          103 kB

        Issue Links

          Activity

            People

              whindsaks whindsaks
              KRosUser KRosUser
              Votes:
              3 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: