[SHELL32] Enable Network Connection Rename CORE-18750

ms say:
ILIsEqual performs a binary comparison of the item data.
Remake _ILHACKCompareSimpleIds